--- a/1.amostragem_simples_.ipynb
+++ b/1.amostragem_simples_.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Formação Cientista de Dados - Fernando Amaral e Jones Granatyr\n",
+    "# Formação Cientista de Dados -> Melissa Isizaka 220125r\n",
     "# Amostragem Simples"
    ]
   },
